Exercises/Part1/simpleService.yml
kind: Service
apiVersion: v1
metadata:
  name: web
spec:
  selector:
    app: myapp
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
  type: NodePort
